Item2D : Delete the RP descriptor when cleanup

Item2D rendernode has its own renderpass descriptor and
the deletion should be done before deleting the rhi context.

Fixes: QTBUG-96302
Change-Id: I328850dd139117d24a67f1aeff17efe4d522b851
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
(cherry picked from commit fba78e59e95347b50e49e0c02782d55f7dac45aa)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>