src/runtimerender/graphobjects/qssgrenderitem2d.cpp
@@ -15,6 +15,10 @@ QSSGRenderItem2D::QSSGRenderItem2D()
 
 QSSGRenderItem2D::~QSSGRenderItem2D()
 {
+    // Normally it will be deleted when m_renderer destroyed
+    // by QQuick3DItem2D's connection
+    // But if this backend node may suddenly be deleted,
+    // it is safe to remain this deletion here.
     delete m_rp;
 }
 
